--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "chakra-react-select": "^4.7.6",
+    "date-fns": "^3.6.0",
     "framer-motion": "^6.5.1",
+    "jose": "^5.3.0",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^3.11.0",
+    "react-jwt": "^1.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
